--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: pink;
     --foreground: #ededed;
   }
 }
@@ -17,5 +17,10 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
